--- a/week1/day1.ipynb
+++ b/week1/day1.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
    "outputs": [],
@@ -151,10 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7b87cadb-d513-4303-baee-a37b6f938e4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key found and looks good so far!\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables in a file called .env\n",
     "\n",
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "019974d9-f3ad-4a8a-b5f9-0a3719aea2d3",
    "metadata": {},
    "outputs": [],
@@ -341,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f25dcd35-0cd0-4235-9f64-ac37ed9eaaa5",
    "metadata": {},
    "outputs": [],
@@ -354,10 +362,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "21ed95c5-7001-47de-a36d-1d6673b403ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh, just a little math—it's 4. Did you want a round of applause for that groundbreaking question?\n"
+     ]
+    }
+   ],
    "source": [
     "# To give you a preview -- calling OpenAI with system and user messages:\n",
     "\n",
@@ -607,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
