--- a/week1/day5.ipynb
+++ b/week1/day5.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d5b08506-dc8b-4443-9201-5f1848161363",
    "metadata": {},
    "outputs": [],
@@ -42,10 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fc5d8880-f2ee-4c06-af16-ecbc0262af61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "API key looks good so far\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize and constants\n",
     "\n",
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "106dd65e-90af-4ca8-86b6-23a41840645b",
    "metadata": {},
    "outputs": [],
@@ -101,13 +109,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "e30d8128-933b-44cc-81c8-ab4c9d86589a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://edwarddonner.com/',\n",
+       " 'https://edwarddonner.com/connect-four/',\n",
+       " 'https://edwarddonner.com/outsmart/',\n",
+       " 'https://edwarddonner.com/about-me-and-about-nebula/',\n",
+       " 'https://edwarddonner.com/posts/',\n",
+       " 'https://edwarddonner.com/',\n",
+       " 'https://news.ycombinator.com',\n",
+       " 'https://nebula.io/?utm_source=ed&utm_medium=referral',\n",
+       " 'https://www.prnewswire.com/news-releases/wynden-stark-group-acquires-nyc-venture-backed-tech-startup-untapt-301269512.html',\n",
+       " 'https://patents.google.com/patent/US20210049536A1/',\n",
+       " 'https://www.linkedin.com/in/eddonner/',\n",
+       " 'https://edwarddonner.com/2025/05/28/connecting-my-courses-become-an-llm-expert-and-leader/',\n",
+       " 'https://edwarddonner.com/2025/05/28/connecting-my-courses-become-an-llm-expert-and-leader/',\n",
+       " 'https://edwarddonner.com/2025/05/18/2025-ai-executive-briefing/',\n",
+       " 'https://edwarddonner.com/2025/05/18/2025-ai-executive-briefing/',\n",
+       " 'https://edwarddonner.com/2025/04/21/the-complete-agentic-ai-engineering-course/',\n",
+       " 'https://edwarddonner.com/2025/04/21/the-complete-agentic-ai-engineering-course/',\n",
+       " 'https://edwarddonner.com/2025/01/23/llm-workshop-hands-on-with-agents-resources/',\n",
+       " 'https://edwarddonner.com/2025/01/23/llm-workshop-hands-on-with-agents-resources/',\n",
+       " 'https://edwarddonner.com/',\n",
+       " 'https://edwarddonner.com/connect-four/',\n",
+       " 'https://edwarddonner.com/outsmart/',\n",
+       " 'https://edwarddonner.com/about-me-and-about-nebula/',\n",
+       " 'https://edwarddonner.com/posts/',\n",
+       " 'mailto:hello@mygroovydomain.com',\n",
+       " 'https://www.linkedin.com/in/eddonner/',\n",
+       " 'https://twitter.com/edwarddonner',\n",
+       " 'https://www.facebook.com/edward.donner.52']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ed = Website(\"https://edwarddonner.com\")\n",
     "ed.links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9bd2aad9-1f95-4248-9de5-39ff75483535",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Webpage Title:\\nHome - Edward Donner\\nWebpage Contents:\\nHome\\nConnect Four\\nOutsmart\\nAn arena that pits LLMs against each other in a battle of diplomacy and deviousness\\nAbout\\nPosts\\nWell, hi there.\\nI’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\\nvery\\namateur) and losing myself in\\nHacker News\\n, nodding my head sagely to things I only half understand.\\nI’m the co-founder and CTO of\\nNebula.io\\n. We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\\nacquired in 2021\\n.\\nWe work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\\npatented\\nour matching model, and our award-winning platform has happy customers and tons of press coverage.\\nConnect\\nwith me for more!\\nMay 28, 2025\\nConnecting my courses – become an LLM expert and leader\\nMay 18, 2025\\n2025 AI Executive Briefing\\nApril 21, 2025\\nThe Complete Agentic AI Engineering Course\\nJanuary 23, 2025\\nLLM Workshop – Hands-on with Agents – resources\\nNavigation\\nHome\\nConnect Four\\nOutsmart\\nAn arena that pits LLMs against each other in a battle of diplomacy and deviousness\\nAbout\\nPosts\\nGet in touch\\ned [at] edwarddonner [dot] com\\nwww.edwarddonner.com\\nFollow me\\nLinkedIn\\nTwitter\\nFacebook\\nSubscribe to newsletter\\nType your email…\\nSubscribe\\n\\n'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ed.get_contents()"
    ]
   },
   {
@@ -128,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6957b079-0d96-45f7-a26a-3487510e9b35",
    "metadata": {},
    "outputs": [],
@@ -149,17 +216,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b97e4068-97ed-4120-beae-c42105e4d59a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are provided with a list of links found on a webpage. You are able to decide which of the links would be most relevant to include in a brochure about the company, such as links to an About page, or a Company page, or Careers/Jobs pages.\n",
+      "You should respond in JSON as in this example:\n",
+      "{\n",
+      "    \"links\": [\n",
+      "        {\"type\": \"about page\", \"url\": \"https://full.url/goes/here/about\"},\n",
+      "        {\"type\": \"careers page\": \"url\": \"https://another.full.url/careers\"}\n",
+      "    ]\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(link_system_prompt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "8e1f601b-2eaf-499d-b6b8-c99050c9d6b3",
    "metadata": {},
    "outputs": [],
@@ -175,17 +258,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "6bcbfa78-6395-4685-b92c-22d592050fd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the list of links on the website of https://edwarddonner.com - please decide which of these are relevant web links for a brochure about the company, respond with the full https URL in JSON format. Do not include Terms of Service, Privacy, email links.\n",
+      "Links (some might be relative links):\n",
+      "https://edwarddonner.com/\n",
+      "https://edwarddonner.com/connect-four/\n",
+      "https://edwarddonner.com/outsmart/\n",
+      "https://edwarddonner.com/about-me-and-about-nebula/\n",
+      "https://edwarddonner.com/posts/\n",
+      "https://edwarddonner.com/\n",
+      "https://news.ycombinator.com\n",
+      "https://nebula.io/?utm_source=ed&utm_medium=referral\n",
+      "https://www.prnewswire.com/news-releases/wynden-stark-group-acquires-nyc-venture-backed-tech-startup-untapt-301269512.html\n",
+      "https://patents.google.com/patent/US20210049536A1/\n",
+      "https://www.linkedin.com/in/eddonner/\n",
+      "https://edwarddonner.com/2025/05/28/connecting-my-courses-become-an-llm-expert-and-leader/\n",
+      "https://edwarddonner.com/2025/05/28/connecting-my-courses-become-an-llm-expert-and-leader/\n",
+      "https://edwarddonner.com/2025/05/18/2025-ai-executive-briefing/\n",
+      "https://edwarddonner.com/2025/05/18/2025-ai-executive-briefing/\n",
+      "https://edwarddonner.com/2025/04/21/the-complete-agentic-ai-engineering-course/\n",
+      "https://edwarddonner.com/2025/04/21/the-complete-agentic-ai-engineering-course/\n",
+      "https://edwarddonner.com/2025/01/23/llm-workshop-hands-on-with-agents-resources/\n",
+      "https://edwarddonner.com/2025/01/23/llm-workshop-hands-on-with-agents-resources/\n",
+      "https://edwarddonner.com/\n",
+      "https://edwarddonner.com/connect-four/\n",
+      "https://edwarddonner.com/outsmart/\n",
+      "https://edwarddonner.com/about-me-and-about-nebula/\n",
+      "https://edwarddonner.com/posts/\n",
+      "mailto:hello@mygroovydomain.com\n",
+      "https://www.linkedin.com/in/eddonner/\n",
+      "https://twitter.com/edwarddonner\n",
+      "https://www.facebook.com/edward.donner.52\n"
+     ]
+    }
+   ],
    "source": [
     "print(get_links_user_prompt(ed))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "a29aca19-ca13-471c-a4b4-5abbfa813f69",
    "metadata": {},
    "outputs": [],
@@ -206,10 +326,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "74a827a0-2782-4ae5-b210-4a242a8b4cc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/',\n",
+       " '/models',\n",
+       " '/datasets',\n",
+       " '/spaces',\n",
+       " '/docs',\n",
+       " '/enterprise',\n",
+       " '/pricing',\n",
+       " '/login',\n",
+       " '/join',\n",
+       " '/spaces',\n",
+       " '/models',\n",
+       " '/black-forest-labs/FLUX.1-Kontext-dev',\n",
+       " '/tencent/Hunyuan-A13B-Instruct',\n",
+       " '/google/gemma-3n-E4B-it',\n",
+       " '/OmniGen2/OmniGen2',\n",
+       " '/google/magenta-realtime',\n",
+       " '/models',\n",
+       " '/spaces/enzostvs/deepsite',\n",
+       " '/spaces/OmniGen2/OmniGen2',\n",
+       " '/spaces/black-forest-labs/FLUX.1-Kontext-Dev',\n",
+       " '/spaces/ilcve21/Sparc3D',\n",
+       " '/spaces/multimodalart/self-forcing',\n",
+       " '/spaces',\n",
+       " '/datasets/fka/awesome-chatgpt-prompts',\n",
+       " '/datasets/facebook/seamless-interaction',\n",
+       " '/datasets/FreedomIntelligence/ShareGPT-4o-Image',\n",
+       " '/datasets/institutional/institutional-books-1.0',\n",
+       " '/datasets/EssentialAI/essential-web-v1.0',\n",
+       " '/datasets',\n",
+       " '/join',\n",
+       " '/pricing#endpoints',\n",
+       " '/pricing#spaces',\n",
+       " '/pricing',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/enterprise',\n",
+       " '/allenai',\n",
+       " '/facebook',\n",
+       " '/amazon',\n",
+       " '/google',\n",
+       " '/Intel',\n",
+       " '/microsoft',\n",
+       " '/grammarly',\n",
+       " '/Writer',\n",
+       " '/docs/transformers',\n",
+       " '/docs/diffusers',\n",
+       " '/docs/safetensors',\n",
+       " '/docs/huggingface_hub',\n",
+       " '/docs/tokenizers',\n",
+       " '/docs/trl',\n",
+       " '/docs/transformers.js',\n",
+       " '/docs/smolagents',\n",
+       " '/docs/peft',\n",
+       " '/docs/datasets',\n",
+       " '/docs/text-generation-inference',\n",
+       " '/docs/accelerate',\n",
+       " '/models',\n",
+       " '/datasets',\n",
+       " '/spaces',\n",
+       " '/changelog',\n",
+       " 'https://endpoints.huggingface.co',\n",
+       " '/chat',\n",
+       " '/huggingface',\n",
+       " '/brand',\n",
+       " '/terms-of-service',\n",
+       " '/privacy',\n",
+       " 'https://apply.workable.com/huggingface/',\n",
+       " 'mailto:press@huggingface.co',\n",
+       " '/learn',\n",
+       " '/docs',\n",
+       " '/blog',\n",
+       " 'https://discuss.huggingface.co',\n",
+       " 'https://status.huggingface.co/',\n",
+       " 'https://github.com/huggingface',\n",
+       " 'https://twitter.com/huggingface',\n",
+       " 'https://www.linkedin.com/company/huggingface/',\n",
+       " '/join/discord',\n",
+       " 'https://www.zhihu.com/org/huggingface',\n",
+       " 'https://huggingface.co/datasets/huggingface/documentation-images/resolve/main/blog/chinese-language-blog/wechat.jpg']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Anthropic has made their site harder to scrape, so I'm using HuggingFace..\n",
     "\n",
@@ -219,10 +432,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d3d583e2-dcc4-40cc-9b28-1e8dbf402924",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'links': [{'type': 'about page', 'url': 'https://huggingface.co'},\n",
+       "  {'type': 'enterprise page', 'url': 'https://huggingface.co/enterprise'},\n",
+       "  {'type': 'pricing page', 'url': 'https://huggingface.co/pricing'},\n",
+       "  {'type': 'careers page', 'url': 'https://apply.workable.com/huggingface/'},\n",
+       "  {'type': 'blog page', 'url': 'https://huggingface.co/blog'},\n",
+       "  {'type': 'community discussion page',\n",
+       "   'url': 'https://discuss.huggingface.co'},\n",
+       "  {'type': 'GitHub page', 'url': 'https://github.com/huggingface'},\n",
+       "  {'type': 'Twitter page', 'url': 'https://twitter.com/huggingface'},\n",
+       "  {'type': 'LinkedIn page',\n",
+       "   'url': 'https://www.linkedin.com/company/huggingface/'}]}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_links(\"https://huggingface.co\")"
    ]
@@ -239,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "85a5b6e2-e7ef-44a9-bc7f-59ede71037b5",
    "metadata": {},
    "outputs": [],
@@ -501,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
